Add 'Audio' to the desktop file categories
This allows the application to show up in GNOME Software without an AppData file.

--- a/data/org.gnome.SoundRecorder.desktop.in.in
+++ b/data/org.gnome.SoundRecorder.desktop.in.in
@@ -3,7 +3,7 @@ Type=Application
 _Name=Sound Recorder
 _Comment=Record sound via the microphone and play it back
 Icon=gnome-sound-recorder
-Categories=GNOME;GTK;
+Categories=GNOME;GTK;Audio;AudioVideo;
 _Keywords=Audio;Application;Record;
 Exec=gnome-sound-recorder
 StartupNotify=true
