--- a/configure.ac
+++ b/configure.ac
@@ -27,6 +27,7 @@ AC_PATH_PROG(GJS, [gjs])
 GLIB_COMPILE_RESOURCES=`$PKG_CONFIG --variable glib_compile_resources gio-2.0`
 AC_SUBST(GLIB_COMPILE_RESOURCES)
 
+YELP_HELP_INIT
 
 AC_OUTPUT([
 Makefile
@@ -35,4 +36,5 @@ data/appdata/Makefile
 data/icons/Makefile
 src/Makefile
 po/Makefile.in
+help/Makefile
 ])
